@@ -1,2 +1,0 @@
-Note:  This file is currently empty pending the final publication of the
-GPL version 3.  At that time, its text will go here.
