@@ -1,7 +1,6 @@
 archives/OSCON2005LightningTalk.txt
 archives/OSCON2006SessionProposal.txt
 Changes
-GPL
 INSTALL
 lib/Muldis/DB.pm
 lib/Muldis/DB/AST.pm
