@@ -50,9 +50,7 @@ sub new {
 sub _build {
     my ($self, $args) = @_;
     my ($dbms_config) = @{$args}{'dbms_config'};
-
     $self->{$ATTR_DBMS_CONFIG} = $dbms_config;
-
     return;
 }
 
@@ -123,9 +121,7 @@ sub fetch_ast {
 sub store_ast {
     my ($self, $args) = @_;
     my ($val_ast) = @{$args}{'val_ast'};
-
     $self->{$ATTR_VAL_AST} = $val_ast;
-
     return;
 }
 
@@ -204,55 +200,6 @@ sub execute {
 ###########################################################################
 
 } # class Muldis::DB::Engine::Example::HostGateRtn
-
-###########################################################################
-###########################################################################
-
-{ package Muldis::DB::Engine::Example::Var; # class
-
-    my $ATTR_DECL_TYPE = 'decl_type';
-    my $ATTR_PAYLOAD   = 'payload';
-
-###########################################################################
-
-sub new {
-    my ($class, $args) = @_;
-    my $self = bless {}, $class;
-    $self->_build( $args );
-    return $self;
-}
-
-sub _build {
-    my ($self, $args) = @_;
-    my ($decl_type) = @{$args}{'decl_type'};
-
-    my $payload = newBoolLit({ 'v' => (1 == 0) });
-        # TODO: make default val of decl type
-
-    $self->{$ATTR_DECL_TYPE} = $decl_type;
-    $self->{$ATTR_PAYLOAD}   = $payload;
-
-    return;
-}
-
-###########################################################################
-
-sub fetch {
-    my ($self) = @_;
-    return $self->{$ATTR_PAYLOAD};
-}
-
-###########################################################################
-
-sub store {
-    my ($self, $payload) = @_;
-    $self->{$ATTR_PAYLOAD} = $payload;
-    return;
-}
-
-###########################################################################
-
-} # class Muldis::DB::Engine::Example::Var
 
 ###########################################################################
 ###########################################################################
